fix Main z-index scrolling bug

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -5,6 +5,10 @@
   overflow-y: scroll;
   overflow-x: hidden;
   flex: 1;
+  /* resetting z-index here fixes a bug where
+   * scrollbar renders behind content
+   */
+  z-index: 0;
 }
 
 .Main-hideOnMobile {
